--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
 
 <head>
-    <!-- Hotjar Tracking Code for Sitio 5217046 (falta el nombre) -->
+<script defer data-domain="irving8090.github.io/pcSyRh" src="https://api.publytics.net/js/script.manual.min.js"></script>
 <script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:5217046,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    window.publytics = window.publytics || function() { (window.publytics.q = window.publytics.q || []).push(arguments) };
+    publytics('pageview');
 </script>
     <meta charset="utf-8">
     <title>MUSIC AND THE WORLD</title>
